--- a/prospective-students.html
+++ b/prospective-students.html
@@ -17,12 +17,12 @@
 
 
 
-	<font size="4" color="#034f84"><b>To Prospective Students:</b></font>
+	<font size="4" color="black"><b>To Prospective Students:</b></font>
 	
 	<br><br>
 	
 	<font >
-		I usually look for <b>one</b> self-motivated PhD student each year (starting in Spring or Fall) to work on challenging problems in computer vision. Qualified students will be supported by research or teaching assistantships. If you'd like to know my research work, please refer to my publications at <a href="https://hengfan2010.github.io/publications.html" target="_blank"><font color="#0099ff">this page</font></a>.
+		I usually look for <b>one</b> self-motivated PhD student each year (starting in Spring or Fall) to work on challenging problems in computer vision. Qualified students will be supported by research or teaching assistantships. If you'd like to know my research work, please refer to my publications at <a href="https://hengfan2010.github.io/publications.html" target="_blank"><font color="#2D61FF">this page</font></a>.
 		
 		<br><br>
 		
