--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>Senior Conference Committee</b></font>
+	<font size="4" color="black"><b>Senior Conference Committee</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
@@ -58,7 +58,7 @@
 	
 	<HR>
 	
-	<font size="4" color="#034f84"><b>Conference Program Committee / Reviewer for</b></font>
+	<font size="4" color="black"><b>Conference Program Committee / Reviewer for</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
@@ -123,7 +123,7 @@
 	
 	<HR>
 	
-	<font size="4" color="#034f84"><b>Journal Reviewer for</b></font>
+	<font size="4" color="black"><b>Journal Reviewer for</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
