--- a/teaching.html
+++ b/teaching.html
@@ -26,14 +26,14 @@
 
 <div class="central_body">
 
-	<font size="4" color="#034f84"><b>Department of Computer Science and Engineering, University of North Texas</b></font>
+	<font size="4" color="black"><b>Department of Computer Science and Engineering, University of North Texas</b></font>
 	<br>
 	
 	<ul style="margin-top:5px;">
-		<!-- [<a href="https://hengfan2010.github.io/teaching/23F-6280/index.htm" target="_blank"><font color="#0099ff">course website</font></a>] -->
+		<!-- [<a href="https://hengfan2010.github.io/teaching/23F-6280/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>] -->
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024 [<a href="#" target="_blank"><font color="#0099ff">course website</font></a>]. 
+				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024 [<a href="#" target="_blank"><font color="#2D61FF">course website</font></a>]. 
 				<br>
 			</p>
 		</li>
@@ -56,9 +56,9 @@
 	
 	<!--
 	
-	[<a href="https://hengfan2010.github.io/teaching/23S-5218/index.htm" target="_blank"><font color="#0099ff">course website</font></a>]
+	[<a href="https://hengfan2010.github.io/teaching/23S-5218/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>]
 
-	<font size="4" color="#034f84"><b>Department of Computer Science, Stony Brook University</b></font>
+	<font size="4" color="#2D61FF"><b>Department of Computer Science, Stony Brook University</b></font>
 	<br>
 	
 	<ul style="margin-top:5px;">
@@ -81,7 +81,7 @@
 	
 	
 	
-	<font size="4" color="#034f84"><b>Department of Computer and Information Sciences, Temple University</b></font>
+	<font size="4" color="#2D61FF"><b>Department of Computer and Information Sciences, Temple University</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
