--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -50,7 +50,7 @@ div img:hover{
 	<p style="text-align:justify">
 	<ul>
 		<li>
-			<font size="4"> Instructor: <a href="https://hengfan2010.github.io/index.html" target="_blank"><font color="#0099ff">Heng Fan</font></a> (heng.fan@unt.edu)</font>
+			<font size="4"> Instructor: <a href="https://hengfan2010.github.io/index.html" target="_blank"><font color="#2D61FF">Heng Fan</font></a> (heng.fan@unt.edu)</font>
 		</li>
 		<li>
 			<font size="4"> Office: Discovery Park F284 </font>
@@ -93,19 +93,19 @@ div img:hover{
 	<font size="4">This course does not follow any textbooks closely. However, the following textbooks will be useful for this course:</font>
 	<ul>
 		<li>
-			<font size="4"> <i>Deep Learning</i>, by Ian Goodfellow, Yoshua Bengio, and Aaron Courville, 2016. <a href="https://www.deeplearningbook.org/" target="_blank"><font color="#0099ff">online version</font></a></font>
+			<font size="4"> <i>Deep Learning</i>, by Ian Goodfellow, Yoshua Bengio, and Aaron Courville, 2016. <a href="https://www.deeplearningbook.org/" target="_blank"><font color="#2D61FF">online version</font></a></font>
 		</li>
 		<li>
-			<font size="4"> <i>Computer Vision: Algorithms and Applications (the second edition)</i>, by Rick Szeliski, 2022. <a href="https://szeliski.org/Book/" target="_blank"><font color="#0099ff">online version</font></a></font>
+			<font size="4"> <i>Computer Vision: Algorithms and Applications (the second edition)</i>, by Rick Szeliski, 2022. <a href="https://szeliski.org/Book/" target="_blank"><font color="#2D61FF">online version</font></a></font>
 		</li>
 		<li>
-			<font size="4"> <i>Dive into Deep Learning</i>, by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola, 2019. <a href="https://d2l.ai/index.html" target="_blank"><font color="#0099ff">online version</font></a> <br>(A lot of examples are provided to practice deep learning.)</font>
+			<font size="4"> <i>Dive into Deep Learning</i>, by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola, 2019. <a href="https://d2l.ai/index.html" target="_blank"><font color="#2D61FF">online version</font></a> <br>(A lot of examples are provided to practice deep learning.)</font>
 		</li>
 		<li>
-			<font size="4"> <i>Neural Networks and Deep Learning</i>, by Michael Nielsen, 2019. <a href="http://neuralnetworksanddeeplearning.com/" target="_blank"><font color="#0099ff">online version</font></a></font>
+			<font size="4"> <i>Neural Networks and Deep Learning</i>, by Michael Nielsen, 2019. <a href="http://neuralnetworksanddeeplearning.com/" target="_blank"><font color="#2D61FF">online version</font></a></font>
 		</li>
 		<li>
-			<font size="4"> <i>Introduction to Deep Learning</i>, by Eugene Charniak, 2019. <a href="https://mitpress.mit.edu/books/introduction-deep-learning" target="_blank"><font color="#0099ff">link</font></a></font>
+			<font size="4"> <i>Introduction to Deep Learning</i>, by Eugene Charniak, 2019. <a href="https://mitpress.mit.edu/books/introduction-deep-learning" target="_blank"><font color="#2D61FF">link</font></a></font>
 		</li>
 	</ul>
 	<font size="4">In addition to the textbooks, extra reading materials will be provided as we cover topics. Check out the
