--- a/group.html
+++ b/group.html
@@ -27,7 +27,7 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>Current Students at UNT</b></font>
+	<font size="4" color="black"><b>Current Students at UNT</b></font>
 	<br>
 	<ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
@@ -49,7 +49,7 @@
 
 	<hr>
 
-	<font size="4" color="#034f84"><b>Alumni</b></font>
+	<font size="4" color="black"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS (female), 2024</li>
