--- a/group.html
+++ b/group.html
@@ -33,6 +33,7 @@
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student (female)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant (female)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
     </ul>
