--- a/publications.html
+++ b/publications.html
@@ -37,37 +37,7 @@
 
 	<!-- <table border=0 cellpadding=4> -->
 		
-		<!-- <tr>
-			<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
-					<br>
-					<font color="#000000" >Y. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
-					<br>
-					<font>arXiv:2403.05021, 2024.</font>
-					<br>
-					<a href="https://arxiv.org/abs/2403.05021" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code 
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td><img src="./publication/lorat.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Tracking Meets LoRA: Faster Training, Larger Model, Stronger Performance</font>
-					<br>
-					<font color="#000000" >L. Lin, H. Fan, Z. Zhang, Y. Wang, Y. Xu, and H. Ling</font>
-					<br>
-					<font>arXiv:2403.05231, 2024</font>
-					<br>
-					<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code 
-					<br>
-				</p>
-			</td>
-		</tr>
+		<!-- 
 		
 		<tr>
 			<td><img src="./publication/vasttrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -80,22 +50,6 @@
 					<font>	arXiv:2403.03493, 2024. </font>
 					<br>
 					<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/VastTrack" target="_blank"><font color="#2D61FF">code-benchmark</font></a>  
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td><img src="./publication/dplnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Efficient Multimodal Semantic Segmentation via Dual-Prompt Learning</font>
-					<br>
-					<font color="#000000" >S. Dong, Y. Feng, Q. Yang, Y. Huang, D. Liu, and H. Fan</font>
-					<br>
-					<font>arXiv:2312.00360, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2312.00360" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/ShaohuaDong2021/DPLNet" target="_blank"><font color="#2D61FF">code</font></a>  
 					<br>
 				</p>
 			</td>
@@ -149,22 +103,6 @@
 			</td>
 		</tr> -->
 
-		<!-- <tr>
-			<td><img src="./publication/cctv.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">CCTV-Gun: Benchmarking Handgun Detection in CCTV Images</font>
-					<br>
-					<font color="#000000" >S. Yellapragada*, Z. Li*, K. Doshi, P. Mhasakar, H. Fan, J. Wei, E. Blasch, and H. Ling (*equal contribution)</font>
-					<br>
-					<font>arXiv:2303.10703, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2303.10703" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/srikarym/CCTV-Gun" target="_blank"><font color="#2D61FF">code</font></a>
-					<br>
-				</p>
-			</td>
-		</tr> -->
-
 	<!-- </table> -->
 
 	<HR>
@@ -172,6 +110,70 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+
+			<tr>
+				<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
+						<br>
+						<font color="#000000" >Y. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
+						<br>
+						<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2403.05021" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/HengLan/SMOT" target="_blank"><font color="#2D61FF">code-data</font></a> 
+						<br>
+					</p>
+				</td>
+			</tr>
+	
+			<tr>
+				<td><img src="./publication/lorat.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Tracking Meets LoRA: Faster Training, Larger Model, Stronger Performance</font>
+						<br>
+						<font color="#000000" >L. Lin, H. Fan, Z. Zhang, Y. Wang, Y. Xu, and H. Ling</font>
+						<br>
+						<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code 
+						<br>
+					</p>
+				</td>
+			</tr>
+			
+			<tr>
+				<td><img src="./publication/dplnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Efficient Multimodal Semantic Segmentation via Dual-Prompt Learning</font>
+						<br>
+						<font color="#000000" >S. Dong, Y. Feng, Q. Yang, Y. Huang, D. Liu, and H. Fan</font>
+						<br>
+						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2024. (<b>Oral</b>)</font>
+						<br>
+						<a href="https://arxiv.org/abs/2312.00360" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/ShaohuaDong2021/DPLNet" target="_blank"><font color="#2D61FF">code</font></a>  
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/sicp.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">SiCP: Simultaneous Individual and Cooperative Perception for 3D Object Detection in Connected and Automated Vehicles</font>
+						<br>
+						<font color="#000000" >D. Qu, Q. Chen, T. Bai, A. Qin, H. Lu, H. Fan, S. Fu, and, Q. Yang</font>
+						<br>
+						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2024. (<b>Oral</b>)</font>
+						<br>
+						<a href="https://arxiv.org/abs/2312.04822" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/DarrenQu/SiCP" target="_blank"><font color="#2D61FF">code</font></a>  
+						<br>
+					</p>
+				</td>
+			</tr>
 
 			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
@@ -608,7 +610,7 @@
 					<br>
 					<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
 					<br>
-					<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b><font color="red" >Long Oral</font></b>)</font>
+					<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b>Long Oral</b>)</font>
 					<br>
 					<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#2D61FF">code</font></a>
 					<br>
