--- a/publications.html
+++ b/publications.html
@@ -165,7 +165,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">SiCP: Simultaneous Individual and Cooperative Perception for 3D Object Detection in Connected and Automated Vehicles</font>
 						<br>
-						<font color="#000000" >D. Qu, Q. Chen, T. Bai, A. Qin, H. Lu, H. Fan, S. Fu, and, Q. Yang</font>
+						<font color="#000000" >D. Qu, Q. Chen, T. Bai, A. Qin, H. Lu, H. Fan, S. Fu, and Q. Yang</font>
 						<br>
 						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2024. (<b>Oral</b>)</font>
 						<br>
