--- a/publications.html
+++ b/publications.html
@@ -110,6 +110,22 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+			
+			<tr>
+				<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Cyclic Refiner: Object-Aware Temporal Representation Learning for Multi-View 3D Detection and Tracking</font>
+						<br>
+						<font color="#000000" >M. Guo, Z. Zhang, L. Jing, Y. He, K. Wang, and H. Fan</font>
+						<br>
+						<font>International Journal of Computer Vision (<b>IJCV</b>), 2024, accepted.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2407.03240" target="_blank"><font color="#2D61FF">paper</font></a> 
+						<br>
+					</p>
+				</td>
+			</tr>
 
 			<tr>
 				<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
