--- a/publications.html
+++ b/publications.html
@@ -111,8 +111,8 @@
 	
 		<table border=0 cellpadding=4>
 			
-			<tr>
-				<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<!-- <tr>
+				<td><img src="./publication/cyclicrefiner.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Cyclic Refiner: Object-Aware Temporal Representation Learning for Multi-View 3D Detection and Tracking</font>
@@ -125,7 +125,7 @@
 						<br>
 					</p>
 				</td>
-			</tr>
+			</tr> -->
 
 			<tr>
 				<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
