--- a/prospective-students.html
+++ b/prospective-students.html
@@ -21,12 +21,23 @@
 	
 	<br><br>
 	
+
+	<HR>
+	For <b>PhD</b> students:
+
+	<br><br>
+
 	<font >
-		I usually look for <b>one</b> self-motivated PhD student each year (starting in Spring or Fall) to work on challenging problems in computer vision. Qualified students will be supported by research or teaching assistantships. If you'd like to know my research work, please refer to my publications at <a href="https://hengfan2010.github.io/publications.html" target="_blank"><font color="#2D61FF">this page</font></a>.
-		
+		I usually look for one PhD student each year (starting in Spring or Fall) to work on challenging problems in computer and robotic vision. In particular, the student will work on intelligent video analysis, 
+		and the topics include but are not limited to visual tracking, vision-language video understanding, visual localization, segmentation, etc. The ultimate goal of my research is to equip the machine/computer with the ability to 
+		understand objects in the video. If you'd like to know my research work, please refer to my publications at <a href="https://hengfan2010.github.io/publications.html" target="_blank"><font color="#2D61FF">this page</font></a>.
 		<br><br>
 		
-		If interested, prospective students are encouraged to contact me (my e-mail is heng.fan@unt.edu) with your full CV, transcripts and any other materials that you think can help me better know you. 
+		Qualified PhD students should be highly self-motivated with relevant research experience in computer vision or related fields. A MS degree in CS or related areas is required. Solid background in mathematics and strong programming ability in C++/Python are desired. The students 
+		must be familiar with deep learning frameworks (e.g., PyTorch). All qualified students will be financially supported with research or teaching assistantship.
+
+		<br><br>
+		If you are interested, please send your full CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). The subject can be: Prospective PhD applicant for [semester] (semester can be Spring or Fall with a specific year)
 		
 		<br><br>
 		
@@ -49,11 +60,53 @@
 		</ul>
 		
 		Note: GRE could be WAIVED for excellent applicants.
-		<br><br>
-	
-	In addition to PhD students, motivated master and undergraduate students within UNT are also welcome. But note that, in general, my group does not provide financial support for master or undergraduate students. If you're interested in conducting reseach with me, please contact me.
-		
+			
 	</font>
+
+
+	<br><br>
+
+	<HR>
+	For <b>master</b> students:
+
+	<br><br>
+
+	<font >
+		I am always recruiting master students to conduct research with me. Students are requested to have significant prior experiences related to computer vision and machine learning, e.g., taking relevant courses before. Usually, research 
+		and teaching assistantship will not be provided to master students, but qualified students will be recommended to be an instruction assistant (IA) in the department.
+
+		<br><br>
+		If you are interested, please send me a CV and we can talk for more details.
+	</font>
+
+	<br><br>
+
+	<HR>
+	For <b>undergraduate</b> students:
+
+	<br><br>
+
+	<font >
+		I am looking for undergraduate students to participate in my research projects. The students have the opportunities to be trained with rich hands-on research experience via various projects in computer vision and artificial intelligence. 
+
+		<br><br>
+		For undergraduate students, prior relevant experience is not required. If you are interested in participaring research projects, parcicularly in the computer vision and artificial intelligence areas, please send me an e-mail and we can have a talk.
+	</font>
+
+	<br><br>
+
+	<HR>
+	For <b>TAMS/high school</b> students:
+	<br><br>
+	<font >
+		Students from TAMS and other local high schools are welcome to contact me if you are interested in participating in research projects.
+	</font>
+	<HR>
+	<br><br>
+
+
+	
+	
 
 </body>
 </html>
