--- a/prospective-students.html
+++ b/prospective-students.html
@@ -59,7 +59,10 @@
 		</li>
 		</ul>
 		
-		Note: GRE could be WAIVED for excellent applicants.
+		Note: For excellent applicant, GRE could be WAIVED. 
+		<br><br>
+		Due to a busy schedule, I may not be able to respond to each individual e-mail. I apologize for this, 
+		but please feel free to move on if I did not reply in two weeks. Thanks for understanding.
 			
 	</font>
 
@@ -101,8 +104,9 @@
 	<font >
 		Students from TAMS and other local high schools are welcome to contact me if you are interested in participating in research projects.
 	</font>
-	<HR>
+	
 	<br><br>
+	<HR>
 
 
 	
