--- a/publications.html
+++ b/publications.html
@@ -133,7 +133,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
 						<br>
-						<font color="#000000" >Y. Li, H. Wang, Q. Li, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
+						<font color="#000000" >Y. Li, Q. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
 						<br>
 						<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
 						<br>
