--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
 						<br>
 						<font>International Journal of Computer Vision (<b>IJCV</b>), 2024, accepted.</font>
 						<br>
-						<a href="https://arxiv.org/abs/2407.03240" target="_blank"><font color="#2D61FF">paper</font></a> 
+						<a href="./publication/CyclicRefiner.pdf" target="_blank"><font color="#2D61FF">paper</font></a> 
 						<br>
 					</p>
 				</td>
