--- a/publications-type.html
+++ b/publications-type.html
@@ -51,7 +51,7 @@
 				</p>
 			</td>
 		</tr>
-
+<!-- 
 		<tr>
 			<td><img src="./publication/magic.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
@@ -66,7 +66,7 @@
 					<br>
 				</p>
 			</td>
-		</tr>
+		</tr> -->
 
 		 <tr>
 			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -99,7 +99,7 @@
 				</p>
 			</td>
 		</tr> -->
-		
+<!-- 		
 		<tr>
 			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
@@ -114,7 +114,7 @@
 					<br>
 				</p>
 			</td>
-		</tr>
+		</tr> -->
 	</table>
 	
 	<br>
@@ -124,6 +124,116 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
+			<td><img src="./publication/cyclicrefiner.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Cyclic Refiner: Object-Aware Temporal Representation Learning for Multi-View 3D Detection and Tracking</font>
+					<br>
+					<font color="#000000" >M. Guo, Z. Zhang, L. Jing, Y. He, K. Wang, and H. Fan</font>
+					<br>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 2024, accepted.</font>
+					<br>
+					<a href="./publication/CyclicRefiner.pdf" target="_blank"><font color="#2D61FF">paper</font></a> 
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Robust Domain Adaptive Object Detection with Unified Multi-Granularity Alignment</font>
+					<br>
+					<font color="#000000" >L. Zhang, W. Zhou, H. Fan&dagger;, T. Luo, and H. Ling (&dagger;corresponding author)</font>
+					<br>
+					<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/tiankongzhang/MGA" target="_blank"><font color="#2D61FF">code</font></a>
+					<br>
+				</p>
+			</td>
+
+		<tr>
+			<td><img src="./publication/vlt23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Divert More Attention to Vision-Language Object Tracking</font>
+					<br>
+					<font color="#000000" >M. Guo, Z. Zhang, L. Jing, H. Ling, and H. Fan</font>
+					<br>
+					<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#2D61FF">code</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">AttMOT: Improving Multiple-Object Tracking by Introducing Auxiliary Pedestrian Attributes</font>
+					<br>
+					<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
+					<br>
+					<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2024, accepted. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/AttMOT" target="_blank"><font color="#2D61FF">code</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/gebd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Local Compressed Video Stream Learning for Generic Event Boundary Detection</font>
+					<br>
+					<font color="#000000" >L. Zhang, X. Gu, C. Li, T. Luo, and H. Fan</font>
+					<br>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 132: 1187-1204, 2024. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#2D61FF">code</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/sspnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">SSPNet: Scale and Spatial Priors Guided Generalizable and Interpretable Pedestrian Attribute Recognition</font>
+					<br>
+					<font color="#000000">J. Shen, T. Guo, X. Zuo, H. Fan, and W. Yang</font>
+					<br>
+					<font>Pattern Recognition (<b>PR</b>), 148: 110194, 2024. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2312.06049" target="_blank"><font color="#2D61FF">paper</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">ICAFusion: Iterative Cross-Attention Guided Feature Fusion for Multispectral Object Detection</font>
+					<br>
+					<font color="#000000">J. Shen, Y. Chen, Y. Liu, X. Zuo, H. Fan, and W. Yang</font>
+					<br>
+					<font>Pattern Recognition (<b>PR</b>), 145: 109913, 2024. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2308.07504" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/chanchanchan97/ICAFusion" target="_blank"><font color="#2D61FF">code</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
 			<td><img src="./publication/pid.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -131,9 +241,9 @@
 					<br>
 					<font color="#000000" >L. Zhang, L. Jiang, R. Ji, and H. Fan</font>
 					<br>
-					<font>International Journal of Computer Vision (<b>IJCV</b>), 2023, accepted. </font>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 131: 3170-3192, 2023. </font>
 					<br>
-					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/lutao2021/PIDray" target="_blank"><font color="#0099ff">code-data</font></a>
+					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/lutao2021/PIDray" target="_blank"><font color="#2D61FF">code-data</font></a>
 					<br>
 				</p>
 			</td>
@@ -147,9 +257,9 @@
 					<br>
 					<font color="#000000" >H. Wang, L. Zhang, H. Fan, and T. Luo</font>
 					<br>
-					<font>Computer Vision and Image Understanding (<b>CVIU</b>), 2023, accepted.</font>
+					<font>Computer Vision and Image Understanding (<b>CVIU</b>), 235: 103799, 2023.</font>
 					<br>
-					<a href="./publication/CVIU-COST-23.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/wanghao14/COST" target="_blank"><font color="#0099ff">code</font></a>
+					<a href="./publication/CVIU-COST-23.pdf" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/wanghao14/COST" target="_blank"><font color="#2D61FF">code</font></a>
 					<br>
 				</p>
 			
@@ -359,6 +469,151 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
+			<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
+					<br>
+					<font color="#000000" >Y. Li, Q. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
+					<br>
+					<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
+					<br>
+					<a href="https://arxiv.org/abs/2403.05021" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/HengLan/SMOT" target="_blank"><font color="#2D61FF">code-data</font></a> 
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/lorat.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Tracking Meets LoRA: Faster Training, Larger Model, Stronger Performance</font>
+					<br>
+					<font color="#000000" >L. Lin, H. Fan, Z. Zhang, Y. Wang, Y. Xu, and H. Ling</font>
+					<br>
+					<font>European Conference on Computer Vision (<b>ECCV</b>), 2024.</font>
+					<br>
+					<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code 
+					<br>
+				</p>
+			</td>
+		</tr>
+		
+		<tr>
+			<td><img src="./publication/dplnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Efficient Multimodal Semantic Segmentation via Dual-Prompt Learning</font>
+					<br>
+					<font color="#000000" >S. Dong, Y. Feng, Q. Yang, Y. Huang, D. Liu, and H. Fan</font>
+					<br>
+					<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2024. (<b>Oral</b>)</font>
+					<br>
+					<a href="https://arxiv.org/abs/2312.00360" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/ShaohuaDong2021/DPLNet" target="_blank"><font color="#2D61FF">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/sicp.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">SiCP: Simultaneous Individual and Cooperative Perception for 3D Object Detection in Connected and Automated Vehicles</font>
+					<br>
+					<font color="#000000" >D. Qu, Q. Chen, T. Bai, A. Qin, H. Lu, H. Fan, S. Fu, and Q. Yang</font>
+					<br>
+					<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2024. (<b>Oral</b>)</font>
+					<br>
+					<a href="https://arxiv.org/abs/2312.04822" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/DarrenQu/SiCP" target="_blank"><font color="#2D61FF">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/cgstvg.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
+					<br>
+					<font color="#000000">X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang (*equal contribution)</font>
+					<br>
+					<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
+					<br>
+					<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="./publication/CG-STVG-CVPR24-poster.pdf" target="_blank"><font color="#2D61FF">poster</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#2D61FF">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/motionlearner2.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">ProMotion: Prototypes As Motion Learners</font>
+					<br>
+					<font color="#000000">Y. Lu, D. Liu, Q. Wang, C. Han, Y. Cui, Z. Cao, X. Zhang, Y. Chen, and H. Fan</font>
+					<br>
+					<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
+					<br>
+					<a href="https://arxiv.org/abs/2406.04999" target="_blank"><font color="#2D61FF">paper</font></a> 
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/textdet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Kernel Adaptive Convolution for Scene Text Detection via Distance Map Prediction</font>
+					<br>
+					<font color="#000000">J. Zheng, H. Fan, and L. Zhang</font>
+					<br>
+					<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
+					<br>
+					<a href="./publication/Text_detection_CVPR_2024_paper.pdf" target="_blank"><font color="#2D61FF">paper</font></a> 
+					<br>
+				</p>
+			</td>
+		</tr>
+
+
+		<tr>
+			<td><img src="./publication/magic.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">MaGIC: Multi-modality Guided Image Completion</font>
+					<br>
+					<font color="#000000">H. Wang*, Y. Yu*, T. Luo, H. Fan, and L. Zhang (*equal contribution)</font>
+					<br>
+					<font>International Conference on Learning Representations (<b>ICLR</b>), 2024. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="http://www.yongshengyu.com/MaGIC-Page/" target="_blank"><font color="#2D61FF">project</font></a> &nbsp; <a href="https://github.com/yeates/MaGIC" target="_blank"><font color="#2D61FF">code</font></a> 
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/sigspatial-23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">A Multi-granularity Decade-Long Geo-Tagged Twitter Dataset for Spatial Computing</font>
+					<br>
+					<font color="#000000" >Y. Feng, Z. Meng, C. Clemmer, H. Fan, and Y. Huang</font>
+					<br>
+					<font>ACM International Conference on Advances in Geographic Information Systems (<b>SIGSPATIAL</b>), 2023 </font>
+					<br>
+					<a href="./publication/SIGSPATIAL-2023.pdf" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#2D61FF">project-data</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
 			<td><img src="./publication/nsa.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -481,7 +736,7 @@
 					<br>
 					<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
 					<br>
-					<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b><font color="red" >Long Oral</font></b>)</font>
+					<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b><font color="black" >Oral</font></b>)</font>
 					<br>
 					<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
